disable button on submit

--- a/templates/conventions/instructeur_validation.html
+++ b/templates/conventions/instructeur_validation.html
@@ -32,12 +32,25 @@
                 <p class="fr-alert__title">La convention a été validée le {{ convention.valide_le|date:"j F Y" }}</p>
                 <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
 
-                <div>
-                    <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}">
+                <div hidden>
+                    <form method="post" id="force_validation" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}">
                         {% csrf_token %}
-                        <button name="Force" value="True" class="fr-btn fr-mt-3w">
+                        <input type="hidden" name="Force" value="True"/>
+                        <button class="fr-btn fr-mt-3w" id="force_validation_button">
                             Forcer la RE-validation de la convention
                         </button>
+                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
+
+                            onsubmit="myButton.disabled = true; return true;"
+
+                            document.addEventListener('DOMContentLoaded', function () {
+                                document.getElementById("force_validation")
+                                    .addEventListener('submit', function(){
+                                    document.getElementById("force_validation_button").disabled = true
+                                    return true
+                                });
+                            });
+                        </script>
                     </form>
                 </div>
             {% endif %}
