fix typo in template

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                         <span class="fr-fi-checkbox-circle-line fr-fi--xxl" aria-hidden="true"></span>
                     </div>
                     <div class="fr-col-lg-7 fr-col-md-9">
-                        <h3>Coté bailleur</h3>
+                        <h3>Côté bailleur</h3>
                         <ul>
                             <li>Récupérez les informations de l’agrément de financement</li>
                             <li>Validez ou modifiez les informations déjà connues par l’Etat</li>
@@ -51,7 +51,7 @@
                         <span class="fr-fi-mail-line fr-fi--xxl" aria-hidden="true"></span>
                     </div>
                     <div class="fr-col-lg-7 fr-col-md-9">
-                        <h3>Coté instructeurs</h3>
+                        <h3>Côté instructeur</h3>
                         <ul>
                             <li>Suivez en temps réel l'état d'avancement des projets de convention</li>
                             <li>Instruisez uniquement les champs remplis par le bailleur</li>
