--- a/templates/common/comment_dialog.html
+++ b/templates/common/comment_dialog.html
@@ -21,8 +21,7 @@
                                     aria-describedby="text-input-error-desc-error"
                                     type="text"
                                     id="textarea_{{form_input_id}}_comment"
-                                    name="textarea_{{form_input_html}}_comment"
-                                    rows="5"></textarea>
+                                    name="textarea_{{form_input_html}}_comment"></textarea>
                                 <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
                                     <li>
                                         <button id='{{form_input_id}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
@@ -37,6 +36,12 @@
             </div>
         </div>
     </dialog>
+    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+        document.getElementById("textarea_{{form_input_id}}_comment").addEventListener('input', function() {
+            rows = this.value.split(/\r\n|\r|\n/).length
+            this.setAttribute('rows', rows)
+        })
+    </script>
     {% for comment in comments|get_item:object_field %}
         <script type="text/javascript" nonce="{{request.csp_nonce}}">
             create_comment_input('{{form_input_id}}',{
