--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -43,21 +43,34 @@
                             <table>
                                 <thead>
                                     <tr>
+                                        {% if convention.statut != 'BROUILLON' %}
+                                            <th scope="col">
+                                                <div class="content__icons content__icons--darkgrey">
+                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
+                                                        <title id="chatIconTitle">Comments</title>
+                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                                                    </svg>
+                                                </div>
+                                            </th>
+                                        {% endif %}
                                         <th scope="col">Numéro</th>
                                         <th scope="col">Date d'octroi</th>
                                         <th scope="col">Durée (en années)</th>
                                         <th scope="col">Montant (en €) {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Préteur</th>
                                         <th scope="col">Préciser le prêteur si 'Autre'</th>
-                                        {% if convention.statut != 'BROUILLON' %}
-                                            <th scope="col">Comments</th>
-                                        {% endif %}
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for form_pret in formset %}
                                         {% with main_object_field="pret__uuid__"|add:form_pret.uuid.value %}
                                             <tr>
+                                                {% if convention.statut != 'BROUILLON' %}
+                                                    <td id="{{form_pret.uuid.id_for_label}}_div">
+                                                        {% include "common/comment_icon.html" with form_input_id=form_pret.uuid.id_for_label object_field=main_object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input_id=form_pret.uuid.id_for_label form_input_html=form_pret.uuid.html_name convention=convention object_field=main_object_field comments=comments %}
+                                                    </td>
+                                                {% endif %}
                                                 <td>
                                                     <input
                                                         type="hidden"
@@ -81,12 +94,6 @@
                                                 <td>
                                                     {% include "common/form/input_text.html" with form_input=form_pret.autre parent_object_field=main_object_field %}
                                                 </td>
-                                                {% if convention.statut != 'BROUILLON' %}
-                                                    <td id="{{form_pret.uuid.id_for_label}}_div">
-                                                        {% include "common/comment_icon.html" with form_input_id=form_pret.uuid.id_for_label object_field=main_object_field comments=comments %}
-                                                        {% include "common/comment_dialog.html" with form_input_id=form_pret.uuid.id_for_label form_input_html=form_pret.uuid.html_name convention=convention object_field=main_object_field comments=comments %}
-                                                    </td>
-                                                {% endif %}
                                             </tr>
                                         {% endwith %}
                                     {% endfor %}
