--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -169,7 +169,14 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">Comments</th>
+                                                            <th scope="col">
+                                                                <div class="content__icons content__icons--darkgrey">
+                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
+                                                                        <title id="chatIconTitle">Comments</title>
+                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </th>
                                                         {% endif %}
                                                         <th scope="col">Section {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col">Numéro {% include "common/mandatory_field_star.html" %}</th>
@@ -238,7 +245,14 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">Comments</th>
+                                                            <th scope="col">
+                                                                <div class="content__icons content__icons--darkgrey">
+                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
+                                                                        <title id="chatIconTitle">Comments</title>
+                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </th>
                                                         {% endif %}
                                                         <th scope="col">Financement {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col">Désignation {% include "common/mandatory_field_star.html" %}</th>
@@ -297,7 +311,14 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">Comments</th>
+                                                            <th scope="col">
+                                                                <div class="content__icons content__icons--darkgrey">
+                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
+                                                                        <title id="chatIconTitle">Comments</title>
+                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </th>
                                                         {% endif %}
                                                         <th scope="col">Numéro</th>
                                                         <th scope="col">Date d'octroi</th>
@@ -369,7 +390,14 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">Comments</th>
+                                                            <th scope="col">
+                                                                <div class="content__icons content__icons--darkgrey">
+                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
+                                                                        <title id="chatIconTitle">Comments</title>
+                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </th>
                                                         {% endif %}
                                                         <th scope="col" class="col__width--200">Désignation {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--150">Type {% include "common/mandatory_field_star.html" %}</th>
@@ -472,7 +500,14 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">Comments</th>
+                                                            <th scope="col">
+                                                                <div class="content__icons content__icons--darkgrey">
+                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
+                                                                        <title id="chatIconTitle">Comments</title>
+                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </th>
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type d'annexe {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Désignation des logements {% include "common/mandatory_field_star.html" %}</th>
@@ -564,7 +599,14 @@
                                                 <thead>
                                                     <tr>
                                                         {% if convention.statut != 'BROUILLON' %}
-                                                            <th scope="col">Comments</th>
+                                                            <th scope="col">
+                                                                <div class="content__icons content__icons--darkgrey">
+                                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
+                                                                        <title id="chatIconTitle">Comments</title>
+                                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </th>
                                                         {% endif %}
                                                         <th scope="col" class="col__width--150">Type de stationnement {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Nombre de staionnements {% include "common/mandatory_field_star.html" %}</th>
