fix the alignment of total column in Logement table

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -399,8 +399,8 @@
                                                                 </div>
                                                             </th>
                                                         {% endif %}
-                                                        <th scope="col" class="col__width--200">Désignation {% include "common/mandatory_field_star.html" %}</th>
-                                                        <th scope="col" class="col__width--150">Type {% include "common/mandatory_field_star.html" %}</th>
+                                                        <th scope="col" class="col__width--150">Désignation {% include "common/mandatory_field_star.html" %}</th>
+                                                        <th scope="col" class="col__width--120">Type {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Surface habitable {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Surface des annexes réelle {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Surface des annexes retenue dans la SU {% include "common/mandatory_field_star.html" %}</th>
@@ -453,10 +453,8 @@
                                                         </tr>
                                                     {% endfor %}
                                                     <tr>
-                                                        <td class="fr-text--lg">
+                                                        <td colspan="3" class="fr-text--lg">
                                                             Total
-                                                        </td>
-                                                        <td>
                                                         </td>
                                                         <td id="total_sh" class="fr-text--lg">
                                                         </td>
