--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -112,10 +112,8 @@
                                         {% endwith %}
                                     {% endfor %}
                                     <tr>
-                                        <td class="fr-text--lg">
+                                        <td colspan="{% if convention.statut != 'BROUILLON' %}3{% else %}2{% endif %}" class="fr-text--lg">
                                             Total
-                                        </td>
-                                        <td>
                                         </td>
                                         <td id="total_sh" class="fr-text--lg text--center">
                                         </td>
