--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -41,7 +41,7 @@
                         {% endfor %}
 
                         {{ formset.management_form }}
-                        <div class="fr-table fr-table--bordered">
+                        <div class="fr-table fr-table--bordered table--layout-fixed">
                             <table id="lgts_table">
                                 <thead>
                                     <tr>
