--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -19,7 +19,7 @@
                             <span class="fr-fi-edit-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
                         </button>
                         {% include "common/utils/onclick_redirect.html" with id='new_convention' url_target='conventions:selection' %}
-                    {% elif request.user.is_instructeur or request.user.is_staff %}
+                    {% elif request.user.is_instructeur or request.user.is_superuser %}
                         <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
                     {% else %}
                         <p class="fr-mb-3w">Votre profile n'est pas bien configuré, merci de vous rapprocher de votre instructeur</p>
