--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,11 @@
                             <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
                             </span>Créer une convention
                         </button>
-                        {% include "common/utils/onclick_redirect.html" with id='espace_bailleur2' url_target='login' %}
+                        {% if CERBERE_AUTH %}
+                            {% include "common/utils/onclick_redirect.html" with id='espace_bailleur2' url_target='cas_ng_login' %}
+                        {% else %}
+                            {% include "common/utils/onclick_redirect.html" with id='espace_bailleur2' url_target='login' %}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
@@ -64,7 +68,11 @@
                             <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
                             </span>Instruire une convention
                         </button>
-                        {% include "common/utils/onclick_redirect.html" with id='espace_instructeur2' url_target='login' url_params='?instructeur=1'%}
+                        {% if CERBERE_AUTH %}
+                            {% include "common/utils/onclick_redirect.html" with id='espace_instructeur2' url_target='cas_ng_login' %}
+                        {% else %}
+                            {% include "common/utils/onclick_redirect.html" with id='espace_instructeur2' url_target='login' url_params='?instructeur=1'%}
+                        {% endif %}
                     </div>
                 </div>
             </div>
