--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -33,11 +33,20 @@
                         </div>
                         <div class="fr-header__navbar">
                             {% if user.is_authenticated %}
+                                </li>
                                 <button class="fr-btn fr-fi-close-circle-line" id='logout'></button>
-                                {% include "common/utils/onclick_redirect.html" with id='logout' url_target='logout' %}
+                                {% if CERBERE_AUTH %}
+                                    {% include "common/utils/onclick_redirect.html" with id='logout' url_target='cas_ng_logout' %}
+                                {% else %}
+                                    {% include "common/utils/onclick_redirect.html" with id='logout' url_target='logout' %}
+                                {% endif %}
                             {% else %}
                                 <button class="fr-btn fr-fi-edit-line" id='login'></button>
-                                {% include "common/utils/onclick_redirect.html" with id='login' url_target='login' %}
+                                {% if CERBERE_AUTH %}
+                                    {% include "common/utils/onclick_redirect.html" with id='login' url_target='cas_ng_login' %}
+                                {% else %}
+                                    {% include "common/utils/onclick_redirect.html" with id='login' url_target='login' %}
+                                {% endif %}
                             {% endif %}
                         </div>
                     </div>
@@ -57,34 +66,55 @@
                                         Bonjour&nbsp;
                                         <strong>{{ user }}</strong>
                                     </li>
-                                    <li class="fr-mt-2w">
-                                        <button class="fr-btn fr-btn--secondary" id='deconnexion'>
-                                            <span class="fr-fi-close-circle-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
-                                        </button>
-                                        {% include "common/utils/onclick_redirect.html" with id='deconnexion' url_target='logout' %}
-                                    </li>
+                                    {% if CERBERE_AUTH %}
+                                        <li class="fr-mt-2w">
+                                            <button class="fr-btn  fr-btn--secondary" id='cerbere_logout'>
+                                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
+                                                </span>Cerbere logout
+                                            </button>
+                                            {% include "common/utils/onclick_redirect.html" with id='cerbere_logout' url_target='cas_ng_logout' %}
+                                        </li>
+                                    {% else %}
+                                        <li class="fr-mt-2w">
+                                            <button class="fr-btn fr-btn--secondary" id='deconnexion'>
+                                                <span class="fr-fi-close-circle-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
+                                            </button>
+                                            {% include "common/utils/onclick_redirect.html" with id='deconnexion' url_target='logout' %}
+                                        </li>
+                                    {% endif %}
                                     <li>
                                         <a class="fr-link" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
                                             <span class="fr-fi-question-line" aria-hidden="true"></span>
                                         </a>
                                     </li>
                                 </ul>
+
                             {% else %}
                                 <ul class="fr-links-group">
-                                    <li class="fr-mx-3w">
-                                        <button class="fr-btn" id='espace_bailleur'>
-                                            <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
-                                            </span>Espace bailleur
-                                        </button>
-                                        {% include "common/utils/onclick_redirect.html" with id='espace_bailleur' url_target='login' %}
-                                    </li>
-                                    <li>
-                                        <button class="fr-btn fr-btn--secondary" id='espace_instructeur'>
-                                            <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
-                                            </span>Espace instructeur
-                                        </button>
-                                        {% include "common/utils/onclick_redirect.html" with id='espace_instructeur' url_target='login' url_params='?instructeur=1'%}
-                                    </li>
+                                    {% if CERBERE_AUTH %}
+                                        <li class="fr-mx-3w">
+                                            <button class="fr-btn" id='cerbere_login'>
+                                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
+                                                </span>Cerbere login
+                                            </button>
+                                            {% include "common/utils/onclick_redirect.html" with id='cerbere_login' url_target='cas_ng_login' %}
+                                        </li>
+                                    {% else %}
+                                        <li class="fr-mx-3w">
+                                            <button class="fr-btn" id='espace_bailleur'>
+                                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
+                                                </span>Espace bailleur
+                                            </button>
+                                            {% include "common/utils/onclick_redirect.html" with id='espace_bailleur' url_target='login' %}
+                                        </li>
+                                        <li>
+                                            <button class="fr-btn fr-btn--secondary" id='espace_instructeur'>
+                                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
+                                                </span>Espace instructeur
+                                            </button>
+                                            {% include "common/utils/onclick_redirect.html" with id='espace_instructeur' url_target='login' url_params='?instructeur=1'%}
+                                        </li>
+                                    {% endif %}
                                     <li>
                                         <a class="fr-link fr-text--lg" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
                                             <span class="fr-fi-question-line" aria-hidden="true"></span>&nbsp;FAQ
