--- a/templates/conventions/instructeur_validation.html
+++ b/templates/conventions/instructeur_validation.html
@@ -1,4 +1,4 @@
-{% if request.user.is_instructeur %}
+{% if request.user.is_instructeur and convention.statut != 'BROUILLON' %}
     <div class="fr-col-md-12  fr-py-5w">
         <div role="alert" class="fr-alert fr-alert--error">
             {% if convention.is_instruction_ongoing %}
@@ -37,7 +37,7 @@
                         </script>
                     </form>
                 </div>
-            {% else %}
+            {% elif convention.is_validated %}
                 <p class="fr-alert__title">La convention a été validée le {{ convention.valide_le|date:"j F Y" }}</p>
                 <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
 
