--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -3,7 +3,7 @@
 <header role="banner" class="fr-header">
     {% if ENVIRONMENT == 'staging' %}
         <div role="alert" class="fr-alert fr-alert--info">
-            <p>Attention, vous utilisez actuellement la plateforme de <b>STAGING</b></p>
+            <p>Attention, vous utilisez actuellement la plateforme <b>ÉCOLE</b></p>
         </div>
     {% endif %}
     {% if ENVIRONMENT == 'development' %}
