--- a/templates/common/display_order_icon.html
+++ b/templates/common/display_order_icon.html
@@ -1,6 +1,6 @@
 
 
-<a class="fr-link fr-link--sm" href="{% url url_target %}?order_by={% if order_by == order_by_column %}-{% endif %}{{ order_by_column }}" >
+<a class="fr-link fr-link--sm" id='{{order_by_column}}' href='#'>
     {% if '-'|add:order_by_column == order_by%}
         <b><span class="fr-fi-arrow-down-s-line content__icons--blue fr-fi--sm-active" aria-hidden="true"></span></b>
     {% elif order_by_column == order_by %}
@@ -9,3 +9,13 @@
         <span class="fr-fi-arrow-up-s-line grey content__icons--darkgrey fr-fi--sm" aria-hidden="true"></span>
     {% endif %}
 </a>
+
+<script type="text/javascript" nonce="{{request.csp_nonce}}">
+    document.addEventListener('DOMContentLoaded', function () {
+        document.getElementById('{{ order_by_column }}')
+            .addEventListener('click', function(){
+            document.getElementById('order_by').value = "{% if order_by == order_by_column %}-{% endif %}{{ order_by_column }}"
+            document.getElementById('search_conventions').submit()
+        });
+    });
+</script>
